<<<<<<< HEAD
<resources>
    <string name="app_name">EasyLock</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="correo_ejemplo_com">Correo@ejemplo.com</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="crear">CREAR</string>
</resources>
||||||| merged common ancestors
=======
<resources>
    <string name="app_name">EasyLock</string>
</resources>
>>>>>>> 5b212e360e2a2bd293500930b4ad50c4fcca3307
