<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/meteor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dash" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/correo_ejemplo_com"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="30sp" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4.5"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:drawableLeft="@mipmap/ic_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/n_mero_de_tel_fono"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/contrasena"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/confirmar_contrase_a"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.5"
        android:background="@color/colorAccent"
        android:text="@string/crear"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
||||||| merged common ancestors
=======
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:text="Correo@ejemplo.com"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="Número de teléfono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:hint="Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:hint="Confirmar Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        />

    <Button
        android:text="CREAR"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@color/primary_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
</LinearLayout>
>>>>>>> 5b212e360e2a2bd293500930b4ad50c4fcca3307
