<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cloud"
    android:weightSum="10">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@mipmap/ic_account"
                android:hint="@string/correo"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@mipmap/ic_lock"
                android:hint="@string/contrase_a"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:text=""
                android:textColorHint="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/ingresar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/ingresar"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:text="@string/registrarse"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>
||||||| merged common ancestors
=======
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        />
    
    
    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        android:hint="Correo"
        android:textColorHint="@color/secondary_text"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:hint="Contraseña"
        android:textColorHint="@color/secondary_text"
        />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="INGRESAR"
        android:textColor="@color/white"
        android:background="@color/primary_dark"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/registrarse"
        android:text="REGISTRARSE"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@color/primary_dark"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
>>>>>>> 5b212e360e2a2bd293500930b4ad50c4fcca3307
